k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: llm-proxy
spec: {}
status: {}
