k8s/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: infra
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.22
          ports:
            - containerPort: 3000
              name: http-web
            - containerPort: 22
              name: ssh-git
          volumeMounts:
            - name: gitea-storage
              mountPath: /data
      volumes:
        - name: gitea-storage
          persistentVolumeClaim:
            claimName: gitea-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 8085
      targetPort: 3000
    - name: ssh
      port: 7999
      targetPort: 2
